# dmr

./: .gitignore  Cargo.toml  README.md  build.rs
dmc/opl/: opl.c  opl.h  opl3.c  opl_internal.h  opl_queue.c  opl_queue.h  opl_sdl.c  opl_sdl.h
dmc/pcsound/: pcsound.c
dmc/src/: config.h  crispy.h  d_dedicated.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_main.c  deh_main.h  deh_str.c  doomtype.h  gusconf.c  i_cdmus.c  i_input.c  i_joystick.c  i_main.c  i_musicpack.c  i_oplmusic.c  i_pcsound.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_sound.h  i_system.c  i_system.h  i_video.c  i_video.h  i_videohr.c  i_videohr.h  m_argv.c  m_argv.h  m_bbox.c  m_config.c  m_config.h  m_controls.c  (+25 more)
dmc/src/doom/: am_map.c  d_main.c  d_player.h  deh_mapping.c  deh_mapping.h  doomdata.h  doomdef.h  doomstat.c  doomstat.h  f_finale.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  m_crispy.c  m_crispy.h  m_menu.c  m_menu.h  p_blockmap.c  p_ceilng.c  p_doors.c  p_enemy.c  p_extnodes.c  p_extnodes.h  p_floor.c  p_inter.c  p_lights.c  (+24 more)
dmc/textscreen/: txt_fileselect.c  txt_sdl.c  txt_window.c
scripts/: checkc
src/: c_ffi.rs  d_event.rs  d_game.rs  lib.rs  m_argv.rs  m_box.rs  m_fixed.rs  main.rs  opl_queue.rs  w_wad.rs
src/app/: app.rs  app_config.rs  mod.rs
src/basics/: mod.rs
src/data/: data_config.rs  mod.rs
src/game/: d_game.rs  mod.rs
src/gui/: gui_config.rs  mod.rs
src/sound/: mod.rs  opl3.rs  opl3_channel.rs  opl3_chip.rs  opl3_slot.rs  opl3_waveforms.rs  opl3_writebuf.rs  opl_queue.rs
tests/: wad_tests.rs
(+12 files in other folders)
