[package]
name = "dmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
clap = { version = "4.0.32", features = ["derive", "cargo", "env"] }
assertor = "0.0.2"
ternary-operator-macro = "0.0.1"

[build-dependencies]
cc = "1.0.78"
